# Realsense-Odometry-Test

./: CMakeLists.txt
scripts/: notify_compile.sh
src/: main.cpp
